# lutnets

./: .gitignore  Cargo.toml  README.md  Settings.toml
src/: dataloader.rs  iterators.rs  lib.rs  lut_bank_creators.rs  modelloader.rs  netcore.rs  processing.rs  settings.rs  utils.rs
src/architectures/: mod.rs
src/architectures/cnn_inspired/: ciconf.toml  netimpl.rs  settings.rs
src/architectures/cnn_iv0/: Settings.toml  netimpl.rs  settings.rs
src/architectures/cnn_iv1/: Settings.toml  netimpl.rs  settings.rs
src/architectures/cnn_iv2/: Settings.toml  netimpl.rs  settings.rs
src/architectures/cnn_iv3/: Settings.toml  netimpl.rs  settings.rs
src/architectures/cnn_rand_hybrid/: ciconf.toml  netimpl.rs  settings.rs
src/training_algos/: mod.rs
src/training_algos/bitflip_evolutionary/: netimpl.rs  trainer.rs
src/training_algos/naive_evolutionary/: netimpl.rs  trainer.rs
src/training_algos/piv_node_flipper/: netimpl.rs  trainer.rs  utils.rs
